8333852: Allow flat array layout for value based classes.
Reviewed-by: bkilambi